--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion yawning">
-<img src=""
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion yawning">
+
 
 </body>
 </html>
