--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion yawning">
-<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion yawning">
-<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion yawning">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion yawning" title="We're here to help you!">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion yawning" title="We're here to help you!">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion yawning" title="We're here to help you!">
 
 
 </body>
